fixed spacing on 404 page

--- a/whereistheiss/src/Components/NotFound/NotFound.css
+++ b/whereistheiss/src/Components/NotFound/NotFound.css
@@ -1,6 +1,6 @@
-h1 {
+h2 {
     text-align: center;
-    padding-top: 25%;
     font-size: 3rem;
     color: #ffffff;
+    padding-top: 20%;
 }
